syntax = "proto3";
 
option csharp_namespace = "FinistGateway";
 
package user;
 
message LoginInfo{
    string phone_number = 1;
    string password = 2;
}
 
message IsCorrectLoginInfo{
    bool is_correct = 1;
}

message PhoneNumber{
    string phone_number = 1;
}

message UserReply{
    string phone_number = 1;
    string first_name = 2;
    string middle_name = 3;
    string last_name = 4;
    repeated BankAccountReply bank_accounts = 5;

}

message BankAccountReply{
    string phone_number = 1;
    string account_number = 2;
    string account_type = 3;
}
 
service LoginningService {
  rpc TryLoginning (LoginInfo) returns (IsCorrectLoginInfo);
}

service UserService {
    rpc GetUser(PhoneNumber) returns (UserReply);
}